--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         "type": "process",
         "args": [
           "build",
-          "${workspaceFolder}/YourProject.csproj"
+          "${workspaceFolder}/dotnetgirls_site/dotnetgirls_site.csproj"
         ],
         "problemMatcher": "$msCompile"
       }
