--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,14 +17,14 @@ jobs:
         dotnet-version: 8.0.x
         
     - name: Restore dependencies
-      run: dotnet restore ${GITHUB_WORKSPACE}/dotnetgirls_site/dotnetgirls_site.csproj
+      run: echo $GITHUB_WORSPACE
+           dotnet restore ${GITHUB_WORKSPACE}/dotnetgirls_site/dotnetgirls_site.csproj
       
     - name: Build
       run: dotnet build ${GITHUB_WORKSPACE}/dotnetgirls_site/dotnetgirls_site.csproj
       
     - name: Test
-      run: echo ${GITHUB_WORSPACE}
-           dotnet test --no-build --verbosity normal ${GITHUB_WORKSPACE}/dotnetgirls_site/dotnetgirls_site.csproj
+      run: dotnet test --no-build --verbosity normal ${GITHUB_WORKSPACE}/dotnetgirls_site/dotnetgirls_site.csproj
       
     - name: Publish
       run: dotnet publish --configuration Release --output ${GITHUB_WORKSPACE}/dotnetgirls_site/dotnetgirls_site/build_output ${GITHUB_WORKSPACE}/dotnetgirls_site/dotnetgirls_site.csproj
